
generator client {
  provider = "prisma-client-js"
}

generator dbml {
    provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id    Int    @id @default(autoincrement())
  email String @unique
  password  String
  phone String?
  name  String
  status Int    @default(1)
  createAt DateTime @default(now())
  updateAt DateTime? @updatedAt
  posts Post[]

  @@map("users")
}

model Post {
  id         Int      @id @default(autoincrement())
  title      String
  summary    String
  content    String   
  status     Int      @default(1)
  owner      User     @relation(fields: [ownerId], references: [id])
  ownerId    Int
  category   Category @relation(fields: [categoryId], references: [id])
  categoryId Int

  @@map("posts")
}
model Category {
  id    Int    @id @default(autoincrement())
  name  String
  description String
  createAt DateTime @default(now())
  updateAt DateTime? @updatedAt
  posts Post[]
  @@map("categories")
}

model Comment {
  id    Int    @id @default(autoincrement())
  message String

  @@map("comments")
}